--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+recordings/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
